# crypto-swing-scanner

./: .gitignore  SETUP.md  labeled_setups.pkl  main.py  pyproject.toml  requirements.txt
.github/workflows/: scanner.yml
dashboard/: index.html  results.json
data/: symbol_listing_dates.json  walk_forward_5y_report.txt
data/kline_cache/: AAVEUSDT_4h_2021-06.parquet  AAVEUSDT_4h_2021-07.parquet  AAVEUSDT_4h_2021-08.parquet  AAVEUSDT_4h_2021-09.parquet  AAVEUSDT_4h_2021-10.parquet  AAVEUSDT_4h_2021-11.parquet  AAVEUSDT_4h_2021-12.parquet  AAVEUSDT_4h_2022-01.parquet  AAVEUSDT_4h_2022-02.parquet  AAVEUSDT_4h_2022-03.parquet  AAVEUSDT_4h_2022-04.parquet  AAVEUSDT_4h_2022-05.parquet  AAVEUSDT_4h_2022-06.parquet  AAVEUSDT_4h_2022-07.parquet  AAVEUSDT_4h_2022-08.parquet  AAVEUSDT_4h_2022-09.parquet  AAVEUSDT_4h_2022-10.parquet  AAVEUSDT_4h_2022-11.parquet  AAVEUSDT_4h_2022-12.parquet  AAVEUSDT_4h_2023-01.parquet  AAVEUSDT_4h_2023-02.parquet  AAVEUSDT_4h_2023-03.parquet  AAVEUSDT_4h_2023-04.parquet  AAVEUSDT_4h_2023-05.parquet  AAVEUSDT_4h_2023-06.parquet  AAVEUSDT_4h_2023-07.parquet  AAVEUSDT_4h_2023-08.parquet  AAVEUSDT_4h_2023-09.parquet  (+1891 more)
docs/: results.json
scripts/: live_scan.py  pull_data.py  run_backtest.py  run_new_signals_grid.py  run_tape_backtest.py  run_variant_grid.py  run_walk_forward_5y.py  train_signal_filter.py
src/: scanner.py
tests/: test_backtesting.py  test_engine.py  test_indicators.py  test_kline_archive.py  test_loss_report.py  test_modules.py  test_orderbook.py  test_scoring.py  test_tape_signal.py  test_trade_tape.py  test_walk_forward.py
(+34 files in other folders)
