[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-swing-scanner"
version = "1.0.0"
description = "Crypto swing-trading scanner and alert system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "ccxt>=4.3.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]

[project.scripts]
crypto-scanner = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
